# EqUniAPI

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.dev-depends.yml  docker-compose.yml  example.env  pyproject.toml
docs/: database.drawio
frontend/: package-lock.json  package.json
frontend/src/api/: auth.ts  base.tsx  breeds.ts  horses.ts  static_information.ts  users.ts
frontend/src/ui/: pagination.tsx  tableWithFilters.tsx
frontend_old/: package-lock.json  package.json
frontend_old/src/: App.tsx  BaseLayout.tsx  index.css
frontend_old/src/axios/: authApi.ts  baseApi.ts  breedsApi.ts  horsesApi.ts
frontend_old/src/components/: pagination.tsx  tableWithFilters.tsx
frontend_old/src/hooks/: redux.ts
frontend_old/src/pages/: dashboardPage.tsx  horsesPage.tsx  loginPage.tsx
frontend_old/src/routes/: routes.tsx
frontend_old/src/store/: index.ts  layoutSlice.ts
src/: manage.py
src/documentation/: apps.py  views.py
src/equestrian/: asgi.py  inline_serializers.py  middleware.py  settings.py  urls.py  utils.py  wsgi.py
src/fixtures/: documentation.json  fake_horses.json
src/gallery/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
src/horses/: apps.py  models.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
src/profile_management/: admin.py  apps.py  models.py  permissions.py  serializers.py  swager_schemas.py  urls.py  urls_auth.py  views.py
src/static_information/: apps.py  models.py  permissions.py  serializers.py  swager_schemas.py  urls.py  views.py
(+50 files in other folders)
